--- a/assets/css/Header-Blue.css
+++ b/assets/css/Header-Blue.css
@@ -201,7 +201,7 @@
   border:1px solid #444;
   background-color:#aaa;
   overflow:hidden;
-  background:url(../../assets/img/screen-content-iphone-6.jpg);
+  background:url(screen-content-iphone-6.jpg);
   background-size:cover;
   background-position:center;
 }
